# TextDB

./: .gitignore  CMakeLists.txt  README.md  ideas.txt  ideas2.txt  nginx.conf  preformatter.cpp  preformatter.h  security_level.cpp  security_level.h  start.sh  store.bindb  store.bindb.backup  store.bindb.kvp  store.text
Explanation.key/Metadata/: DocumentIdentifier  Properties.plist
Taggers/java/: pom.xml
Taggers/java/src/: Main.java  RequestHandler.java  SampleTagger.java  Tagger.java
Taggers/java/src/tagger_message/: TaggerMessage.java
Taggers/protos/: compile.sh  tagger_message.proto
Taggers/python/: SampleTagger.py  Tagger.py  tagger_message_pb2.py
TextDB/: Doc.cpp  Doc.h  LRU.cpp  LRU.h  acceptor.cpp  acceptor.h  api.cpp  api.h  auth.cpp  auth.h  bigram_anomaly.cpp  bigram_anomaly.h  bitreader.cpp  bitreader.h  bitwriter.cpp  bitwriter.h  cache.cpp  cache.h  clustering.cpp  clustering.h  collection.cpp  collection.h  connection.cpp  connection_manager.cpp  connection_manager.hpp  connection_manager.hpp.gch  custom_lambda.cpp  custom_lambda.h  db.cpp  db.h  docgraph.cpp  docgraph.h  encoder.cpp  encoder.h  entry.cpp  entry.h  error.cpp  error.h  html.cpp  html.h  (+47 more)
TextDB.xcodeproj/: project.pbxproj
TextDB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TextDB.xcodeproj/project.xcworkspace/xcshareddata/: TextDB.xccheckout
TextDB.xcodeproj/project.xcworkspace/xcuserdata/anubhav.xcuserdatad/: UserInterfaceState.xcuserstate
TextDB.xcodeproj/xcuserdata/anubhav.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TextDB.xcodeproj/xcuserdata/anubhav.xcuserdatad/xcschemes/: TextDB.xcscheme  xcschememanagement.plist
TextDB/dtl/examples/: a.out
cmake/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GTest.cmake  Makefile  TextDB  cmake_install.cmake
cmake/gmock_ext-prefix/src/gmock_ext-stamp/: download-gmock_ext.cmake  extract-gmock_ext.cmake  gmock_ext-urlinfo.txt  verify-gmock_ext.cmake
cmake/gmock_ext-prefix/tmp/: gmock_ext-cfgcmd.txt
cmake/modules/: FindCURLpp.cmake  FindPoco.cmake  FindSnappy.cmake  GTest.cmake
config/: 1.txt  2.txt  3.txt  test.txt
dashboard/: accounts.json  controller.js  createaccount.html  dashboard.html  data.json  graph.js  hosts.html  index.js  login.html  login.js  md5.js  package.json
data/: negative.txt  positive.txt
data/collections/c-unicode/: word.idx
data/collections/c-unicode/files/: a.fyle  abc.fyle  abcd.fyle  abcde.fyle  abcdef.fyle  abdd.fyle  doc.fyle  lolbc.fyle  lolbsdcsd.fyle  lolqweqwcsd.fyle  lqweqwcsd.fyle  qweqwcsd.fyle  qweqwcssssssd.fyle  qwerddsre.fyle  qwerddsrttttte.fyle  toberemoved.remove.1420974209
data/replication/27000/: mp.var
data/replication/27002/: log.var  mp.var
data/replication/27003/: mp.var
data/replication/27004/: mp.var
drivers/python/: Cursor.py  DB.py  setup.py
drivers/python/TextDB/: Collection.py  Cursor.py  DB.py  __init__.py  sample.txt
drivers/python/TextDB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
drivers/python/TextDB/test/: test.py
drivers/python/TextDB/test/files/: file2.txt  file3.txt  file4.txt  file5.txt  file6.txt
drivers/python/doc/: Makefile
drivers/python/doc/source/: TextDB.rst  conf.py  modules.rst
remove-daemon/: daemon.py
snappy/: Makefile  autogen.sh  config.h.in~  config.status  libtool
snappy/.deps/: snappy-c.Plo  snappy-sinksource.Plo  snappy-stubs-internal.Plo  snappy.Plo  snappy_unittest-snappy-test.Po  snappy_unittest-snappy_unittest.Po
snappy/autom4te.cache/: requests  traces.0
src/: LRU.h  bitwriter.cpp  bitwriter.h  collection.cpp  db.h  docgraph.cpp  docgraph.h  encoder.cpp  encoder.h  operation.h  proposer.cpp  raft.cpp  sentiment.cpp
test/: store.bindb  store.bindb.kvp  store.text  test.sh  tests.cpp  tests.h
test/data/collections/ddr-unicode/: word.idx
test/data/collections/ddr-unicode/files/: ddrtest1.remove.1446880850  ddrtest1.remove.1446886412  ddrtest1.remove.1448130335  ddrtest2.fyle  ddrtest3.fyle
test/data/collections/sentiment-unicode/: word.idx
test/data/collections/sentiment-unicode/files/: ddtest2.fyle  negative.fyle  positive.fyle
test/files/: file1.txt  file7.txt  file8.txt  file9.txt
webserver/: index.js  package.json
webserver/www/: create.html  index.html
